--- a/css/style.css
+++ b/css/style.css
@@ -1557,6 +1557,322 @@ h6 {
 .servers-tabs-click__item:hover {
   color: #fff;
 }
+.anons__preview {
+  padding: 64px 0 48px;
+}
+.anons-preview__title {
+  color: #fff;
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+.anons-preview__text {
+  color: #75798b;
+  font-size: 18px;
+  line-height: 24px;
+  margin-bottom: 64px;
+}
+.anons-preview-add__item {
+  width: calc(33.3% - 16px);
+  border-radius: 4px;
+  overflow: hidden;
+  height: 80px;
+  position: relative;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+.anons-preview-add-item__empty--text {
+  color: #75798b;
+  font-size: 13px;
+  line-height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+}
+.anons-preview-add__item a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.anons-preview-add__item:hover img {
+  transform: scale(1.05);
+}
+.anons-preview-add__item img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: 250ms ease all;
+  top: 0;
+  object-fit: cover;
+  left: 0;
+}
+.anons-preview__add {
+  justify-content: space-between;
+}
+.acli-wrap-list__item {
+  justify-content: space-between;
+  background: #23242e;
+  border-bottom: 1px solid #242630;
+}
+.acli-wrap-list__item:last-child {
+  border-bottom: 0;
+}
+.acli-wrap-list-item__left {
+  align-items: center;
+  gap: 8px;
+}
+.acliwlil__name {
+  font-size: 14px;
+  color: #75798b;
+  font-weight: 500;
+  line-height: 24px;
+}
+.acli-wrap-list__item {
+  padding: 8px 12px;
+}
+.acli-wrap__list {
+  border-radius: 4px;
+  overflow: hidden;
+  margin-top: 24px;
+}
+.acli-wrap__title {
+  font-size: 24px;
+  line-height: 24px;
+  color: #fff;
+  font-weight: 700;
+}
+.acli-wrap-list__item--top {
+  background: linear-gradient(to right, #e84d18, #e89518);
+}
+.anons-content__left {
+  width: calc(100% - 332px);
+}
+.acli-wrap-list__item--middle .acliwlil__name,
+.acli-wrap-list__item--middle .acliwlir__x,
+.acli-wrap-list__item--middle .acliwlir__server,
+.acli-wrap-list__item--middle .acliwlir__date {
+  background: linear-gradient(to bottom left, #00b2ff, #2864fe);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 500;
+}
+.acli-wrap-list__item {
+  transition: 250ms ease all;
+}
+.acli-wrap-list__item:hover {
+  filter: brightness(1.2);
+}
+.anons-content__right {
+  width: 320px;
+}
+.anons-content__wrapper {
+  gap: 32px;
+}
+.anons-content-right__top {
+  background: #1e1f28;
+  width: 100%;
+  padding: 24px;
+  border-radius: 4px;
+}
+.acrtl-item__left {
+  display: flex;
+  align-items: center;
+  color: #75798b;
+  gap: 10px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+}
+.acrtl-item__right--icon {
+  background: url(../img/like.svg) no-repeat center center;
+  background-size: contain;
+  width: 20px;
+  height: 20px;
+}
+.acrtl-item__right {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 13px;
+  color: #75798b;
+}
+.acrsl__item--empty__text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: #75798b;
+  font-size: 13px;
+  line-height: 24px;
+}
+.acrsl__item {
+  border-radius: 4px;
+  position: relative;
+  height: 100px;
+  overflow: hidden;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+.acrsl__item img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: 250ms ease all;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+.acrsl__item:hover img {
+  transform: scale(1.05);
+}
+.anons-content-right__popular--tags {
+  background: #1e1f28;
+  border-radius: 4px;
+  padding: 24px;
+}
+.acrpt-list__item {
+  background: rgb(117 121 139 / 10%);
+  font-weight: 500;
+  color: #75798b;
+  line-height: 24px;
+  font-size: 14px;
+  padding: 4px 9px;
+  border-radius: 100px;
+}
+.acrpt__list {
+  flex-wrap: wrap;
+  gap: 8px;
+}
+.anons-content__right {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.acrsl__item--empty__text {
+  color: #75798b;
+  font-size: 13px;
+  line-height: 24px;
+}
+.anons-content-right-sponsors__list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.acrtl__item {
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 0;
+  border-bottom: 1px solid #242630;
+}
+.anons-content-right-top__title {
+  color: #fff;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  margin-bottom: 24px;
+}
+.acli-wrap-list__item--top--middle .acliwlil__name,
+.acli-wrap-list__item--top--middle .acliwlir__x,
+.acli-wrap-list__item--top--middle .acliwlir__server,
+.acli-wrap-list__item--top--middle .acliwlir__date {
+  background: -webkit-gradient(
+    linear,
+    right top,
+    left bottom,
+    from(#e84a18),
+    to(#e85618)
+  );
+  background: linear-gradient(to bottom left, #ff7a00, #e85618);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 500;
+}
+.acli-wrap-list__more {
+  border-radius: 4px;
+  transition: 250ms ease all;
+  border: 1px solid #2b2c32;
+  border-radius: 4px;
+  transition: 250ms ease all;
+  height: 48px;
+  display: flex;
+  gap: 12px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.acli-wrap-list__more:hover {
+  filter: brightness(1.2);
+}
+.acli-wrap-list__more:hover .acli-wrap-list-more__text {
+  filter: brightness(1.2);
+}
+.acli-wrap-list__more:hover .acli-wrap-list-more__icon {
+  transform: rotate(90deg);
+}
+.acli-wrap-list-more__text {
+  transition: 250ms ease all;
+
+  gap: 12px;
+  color: #75798b;
+  font-size: 16px;
+  line-height: 24px;
+}
+.acli-wrap-list-more__icon {
+  width: 12px;
+  transition: 250ms ease all;
+  height: 12px;
+  background: url(../img/plus.svg) no-repeat center center;
+  background-size: cover;
+}
+.acli-wrap-list__item--top--middle .acliwlil__name {
+  font-weight: 600;
+}
+.anons-content__left {
+  justify-content: space-between;
+}
+.anons-content__left--item {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+  width: calc(50% - 8px);
+}
+.acli-wrap-list__item--middle {
+  font-weight: 600;
+}
+.acli-wrap-list__item--middle .acliwlil__name {
+  font-weight: 700;
+}
+.acli-wrap-list__item--top .acliwlil__name,
+.acli-wrap-list__item--top .acliwlir__x,
+.acli-wrap-list__item--top .acliwlir__server,
+.acli-wrap-list__item--top .acliwlir__date {
+  color: #fff;
+}
+.acliwlil__icon {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.acliwlir__x,
+.acliwlir__server,
+.acliwlir__date {
+  font-size: 13px;
+  color: #75798b;
+  font-weight: 500;
+  line-height: 24px;
+}
+.acli-wrap-list-item__right {
+  gap: 16px;
+}
 @media screen and (max-width: 1600px) {
   .container-big {
     padding: 0 25px;
